<resources>
    <string name="app_name">Shopping List</string>
    <string name="add_shopping_list">Add shopping list</string>
    <string name="your_shopping_lists">Your shopping lists</string>
    <string name="list_name">List name</string>
    <string name="save">Save</string>
    <string name="price">Price</string>
    <string name="count">Count</string>
    <string name="element_text">Element text</string>
    <string name="lists_color">Lists color</string>
    <string name="list_elements_color">List elements color</string>
    <string name="settings">Settings</string>
    <string name="cancel">Cancel</string>
    <string name="notificationPackage">com.byeduck.shoppinglistnotificationprovider</string>
    <string name="mainPackage">com.byeduck.shoppinglist</string>
    <string name="broadcastReceiverClassName">ModificationEventReceiver</string>
    <string name="e_mail">e-mail</string>
    <string name="password">password</string>
    <string name="log_in">LOG IN</string>
    <string name="sign_up">SIGN UP</string>
    <string name="welcome">Welcome %s !</string>
    <string name="shops">SHOPS</string>
    <string name="add_current_location">ADD CURRENT LOCATION</string>
    <string name="title_activity_maps">Map</string>
    <string name="view_your_shops">VIEW FAVOURITE SHOPS</string>
    <string name="shop_name">Shop name</string>
    <string name="description">Description</string>
    <string name="latitude_longitude_fill">latitude | longitude</string>
    <string name="latitude_longitude">latitude: %.2f | longitude: %.2f</string>
    <string name="ok">OK</string>
    <string name="default_radius">50</string>
    <string name="radius">Radius (meters)</string>
    <string name="add_promotion">ADD PROMOTION</string>
    <string name="promo_name">Promo name</string>
    <string name="short_description">Short description</string>
    <string name="full_description">Full description</string>
    <string name="date">Date</string>
    <string name="shop">Shop</string>
    <string name="promotions">PROMOTIONS</string>
    <string name="favourite">Favourite</string>
    <string name="appwidget_text">EXAMPLE</string>
    <string name="add_widget">Add widget</string>
    <string name="url">URL</string>
    <string name="go">GO</string>
    <string name="go_to_page">GO TO PAGE</string>
    <string name="image">IMAGE</string>
    <string name="change_photo">CHANGE PHOTO</string>
    <string name="apply">APPLY</string>
    <string name="change_song">CHANGE SONG</string>
    <string name="pause_resume">PAUSE/RESUME SONG</string>
    <string name="loading">LOADING...</string>
    <string name="song_title">Song title</string>
    <string name="start_stop_song">START/STOP SONG</string>
</resources>