<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="?attr/appWidgetBackgroundColor"
    android:gravity="center"
    android:orientation="vertical"
    android:padding="@dimen/widget_margin"
    android:theme="@style/ThemeOverlay.ShoppingList.AppWidgetContainer">

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginTop="5dp"
        android:layout_weight="2"
        android:contentDescription="@string/image"
        android:src="@drawable/photo1" />

    <TextView
        android:id="@+id/songTitleTxt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/song_title" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="0.5"
        android:gravity="center"
        android:orientation="vertical">

        <Button
            android:id="@+id/goToPageBtn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="50dp"
            android:text="@string/go_to_page" />

        <Button
            android:id="@+id/changeImgBtn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/change_photo" />

        <Button
            android:id="@+id/changeSongBtn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/change_song" />

        <Button
            android:id="@+id/pauseResumeSongBtn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/pause_resume" />

        <Button
            android:id="@+id/startStopSongBtn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/start_stop_song" />

    </LinearLayout>

    <ListView
        android:id="@+id/favouriteShopsList"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="3" />

</LinearLayout>