<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginHorizontal="10dp"
    android:orientation="vertical">

    <!-- Add map fragment to show current location -->

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:labelFor="@id/shopNameTxt"
        android:text="@string/shop_name"
        android:textAlignment="center" />

    <EditText
        android:id="@+id/shopNameTxt"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:importantForAutofill="no"
        android:inputType="text"
        android:textAlignment="center" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:labelFor="@id/shopDescriptionTxt"
        android:text="@string/description"
        android:textAlignment="center" />

    <EditText
        android:id="@+id/shopDescriptionTxt"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:importantForAutofill="no"
        android:inputType="text"
        android:textAlignment="center" />

    <TextView
        android:id="@+id/locationTxt"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:text="@string/latitude_longitude_fill"
        android:textAlignment="center" />

    <LinearLayout
        android:id="@+id/actionButtons"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="horizontal"
        android:layout_marginTop="50dp">

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="10dp"
            android:onClick="addEditShop"
            android:text="@string/ok" />

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="10dp"
            android:onClick="cancel"
            android:text="@string/cancel" />


    </LinearLayout>

</LinearLayout>